# markdown

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_deploy.bat  build_deploy.cmd  build_deploy.sh  clean.bat  clean.cmd  clean.sh
.github/workflows/: deploy.yml
installer/config/: config.xml
